fix collapse view for phone, etc.

--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,9 +1,11 @@
 svg {
-    width: 50px;
-    height: 50px;
+    width: 26px;
+    height: 26px;
     padding: 10px;
     border-radius: 10px;
     background: black;
+    margin-left: 10px;
+    margin-right: 10px;
     fill: rgb(43, 108, 100);
 }
 svg:hover {
