--- a/public/stylesheets/gigs.css
+++ b/public/stylesheets/gigs.css
@@ -2,6 +2,7 @@
     padding-left: 104px;
     padding-right: 104px;
     padding-top: 50px;
+    line-height: 30px;
 }
 /* .half {
     width: 50%;
@@ -58,5 +59,10 @@
     }
     .column2 {
         width: 100%;
+    }
+}
+@media (max-width: 800px) {
+    #gigs {
+        padding: 15px;
     }
 }
