--- a/public/stylesheets/music.css
+++ b/public/stylesheets/music.css
@@ -23,8 +23,27 @@
     width: 100%;
 }
 
-.music h3 {
+.epTitle {
+	font-size: 39px;
+	line-height: 31px;
+}
+
+.ep {
 	text-align: center;
+	padding: 15px;
+	line-height: 50px;
+	font-weight: 300;
+    font-style: medium;
+    font-size: 26px;
+}
+.epTracks {
+	color: rgba(255, 255, 255, 0.8);
+	text-align: center;
+}
+
+.epTracks:hover {
+	color: rgba(255, 255, 255, 1);
+    box-shadow: 0 5px 15px rgba(43, 108, 100, 0.3);
 }
 .music h1 {
 	text-align: center;
@@ -35,4 +54,9 @@ div.gradient {
 	height: auto;
 	padding: 15px;
 	line-height: 0;
+}
+@media(max-width: 800px) {
+	#music {
+		padding: 0px;
+	}
 }
