--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -25,7 +25,7 @@
 .nav-link:hover {
     border-bottom: 2px solid white;  
     color: rgba(255, 255, 255, 1);
-    box-shadow: 0 5px 15px rgba(43, 108, 100, 0.4);
+    box-shadow: 0 5px 15px rgba(43, 108, 100, 0.8);
 }
 
 .nav-menu {
